adicionando animações no blog

--- a/html/blog.html
+++ b/html/blog.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container-lg-header">
-            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-3 pr-3 d-flex justify-content-between align-items-center">
+            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-3 pr-3 d-flex justify-content-between align-items-center wow animated fadeIn delay-03s">
                 <a class="navbar-brand" href="../index.html" target="_parent">
                     <h1 class="d-flex pl-lg-0 pr-lg-0 pl-2 pg-2"><b>PrimeFit</b><img src="../imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
@@ -31,11 +31,11 @@
     <main>
         <section class="container-lg blog-bg">
             <article class="container">
-                <div class="blog-introducao d-flex flex-column justify-content-center align-items-center mx-auto">
+                <div class="blog-introducao d-flex flex-column justify-content-center align-items-center mx-auto wow animated fadeInLeft delay-04s">
                     <h1>Bem-vindo ao PrimeFit Saúde</h1>
                     <h2>Descubra o Melhor para o Seu Dia a Dia em Nosso Blog!</h2>
                 </div>
-                <ul id="app" class="container d-flex flex-column justify-content-center align-items-center blog">
+                <ul id="app" class="container d-flex flex-column justify-content-center align-items-center blog wow animated fadeInLeft delay-04s">
                 </ul>
             </article>
         </section>
