--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         </section>
         <section class="services container-lg">
             <div>
-                <div class="services-text d-flex flex-column mx-auto pr-1 pl-1 wow animated fadeIn delay-04s">
+                <div class="services-text d-flex flex-column mx-auto pr-1 pl-1 wow animated fadeIn delay-03s">
                     <h2><b>Descubra a Excelência</b></h2>
                     <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
                 </div>
-                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4 ml-md-2 mr-md-2 ml-lg-1 mr-lg-1 wow animated fadeInUp delay-05s">
+                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4 ml-md-2 mr-md-2 ml-lg-1 mr-lg-1 wow animated fadeInUp delay-04s">
                    <div class="card" tabindex="0">
                         <img src="./imgs/servicos/musculacao3.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
@@ -128,7 +128,7 @@
                         <h3><b>Ginastica</b></h3>
                     </div>
                 </div>
-                <div class="structures-text container mx-auto d-flex justify-content-center align-items-center flex-column wow animated fadeIn delay-04s">
+                <div class="structures-text container mx-auto d-flex justify-content-center align-items-center flex-column wow animated fadeIn delay-03s">
                     <h2><b>conheça nossos profissionais</b></h2>
                     <p>Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
@@ -395,7 +395,7 @@
                 <h2><b>Nossos Planos</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
-           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-column flex-lg-column flex-xl-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0 wow animated fadeIn delay-04s">
+           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-column flex-lg-column flex-xl-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0 wow animated fadeIn delay-03s">
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price55.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
@@ -426,7 +426,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button  id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary wow animated fadeInLeft delay-05s">Assinar</button>
+                        <button  id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price-2.webp); background-size: cover;">
@@ -459,7 +459,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary wow animated fadeInUp delay-05s">Assinar</button>
+                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
                 <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price44.webp); background-size: cover;">
@@ -492,13 +492,13 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary wow animated fadeInRight delay-05s">Assinar</button>
+                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
             </div>
         </section>
         <section id="contact" class="contact container-lg">
-            <div class="contact-title container d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center wow animated fadeIn delay-04s">
+            <div class="contact-title container d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center wow animated fadeIn delay-02s">
                 <div >
                     <h2 class="d-flex">
                         <b>PrimeFit</b><img src="./imgs/icons/peso3.webp" alt="imagem de um haltere">
@@ -510,7 +510,7 @@
                     </p>
                 </div>
             </div>
-            <div class="contact-info d-flex justify-content-center align-items-center align-items-md-center align-items-lg-start flex-column flex-lg-row wow animated fadeIn delay-04s">
+            <div class="contact-info d-flex justify-content-center align-items-center align-items-md-center align-items-lg-start flex-column flex-lg-row wow animated fadeIn delay-03s">
                 <div class="barra">
                 </div>
                 <address class="contact-middle d-flex justify-content-center align-items-center align-items-lg-start flex-column">
@@ -525,7 +525,7 @@
                     </h2>
                     <div>
                         <h3>Mensagem via whatsapp</h3>
-                        <button type="button" class="btn btn-success wow animated fadeInLeft delay-05s" id="enviarMensagem" aria-label="Enviar">
+                        <button type="button" class="btn btn-success wow animated fadeInLeft delay-03s" id="enviarMensagem" aria-label="Enviar">
                             Enviar<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
                     </div>
@@ -566,7 +566,7 @@
         </section>
     </main>
     <footer class="footer-bg container-lg">
-        <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row wow animated fadeIn delay-04s">
+        <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row wow animated fadeIn delay-03s">
             <div class="footer-redes-sociais d-flex align-items-center">
                 <ul class="d-flex justify-content-center align-items-center">
                     <li><i class="fab fa-twitter" title="Ícone de twitter"></i></li>
@@ -597,7 +597,6 @@
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/wow.min.js"></script>
     <script type="text/javascript" src="./js/modal.js"></script>
-    <script>new WOW().init();</script>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
