--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                     <div class="text-banner pl-lg-0 pr-lg-0 pl-md-0 pr-md-0 pl-2 pr-2">
                         <h1 class="animated fadeInLeft wow delay-02s">
                             <b>
-                                melhor <span class="detail"><b>programa</b></span> para melhores resultados
+                                Vida Ativa, Corpo Forte<span>.</span>
                             </b>
                         </h1>
                         <p class="animated fadeInLeft wow delay-03s">
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-lg-5 col-sm-6 col-8 p-3 d-flex justify-content-center align-items-center animated fadeIn delay-04s" id="enviarMensagem" aria-label="Enviar mensagem">
+                        <button type="button" class="btn col-lg-5 col-sm-6 col-8 p-lg-4 p-md-3 p-3 d-flex justify-content-center align-items-center animated fadeIn delay-04s" id="enviarMensagem" aria-label="Enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                         <h2 class="number-title mr-2">25</h2>
-                        <h2 class="title-type">Anos mudando vidas</h2>
+                        <h2 class="title-type">Anos</h2>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center align-items-center col-12 col-md-4 col-lg">
@@ -91,7 +91,7 @@
                     </div>
                     <div class="numbers-animation-text d-flex justify-content-center align-items-start">
                         <h2 class="number-title mr-2">320</h2>
-                        <h2 class="title-type">Personais trainers</h2>
+                        <h2 class="title-type">Personais</h2>
                     </div>
                 </div>
             </div>
