--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                         <p class="animated fadeInLeft wow delay-03s">
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn col-lg-5 col-sm-6 col-8 p-lg-4 p-md-3 p-3 d-flex justify-content-center align-items-center animated fadeIn delay-04s" id="enviarMensagem" aria-label="Enviar mensagem">
+                        <button type="button" class="btn col-lg-5 col-md-6 col-8 p-lg-3 p-md-3 p-2
+                        d-flex justify-content-center align-items-center animated fadeIn delay-04s" id="enviarMensagem" aria-label="Enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
@@ -373,7 +374,7 @@
                 <div class="calculadora-container container d-flex justify-content-center align-items-center flex-column">
                     <div class="d-flex justify-content-center align-items-center">
                         <h2>Cálcule seu IMC</h2>
-                        <i id="open-modal" class="fas fa-question-circle" title="Ícone de Dúvida"></i>
+                        <i id="open-modal" class="fas fa-question-circle d-block" title="Ícone de Dúvida"></i>
                     </div>
                     <div class="divAltura">
                         <label for="altura">Altura (M)</label>
