Ajustando responsividade dos cometários

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
             <div class="container-lg d-flex justify-content-center align-items-center wow animated fadeInUp delay-04s">
                 <div id="voltar">
-                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-left wow animated fadeInRight delay-05s" id="prev-button"></i>
+                    <i class="next-banck mr-2 m-md-5 m-lg-5 fas fa-chevron-left wow animated fadeInRight delay-05s" id="prev-button"></i>
                 </div>
                     <div class="slider container-cometario flex-column flex-md-column flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
@@ -316,7 +316,7 @@
                         </div>
                     </div>
                 <div id="avancar">
-                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-right wow animated fadeInLeft delay-05s" id="next-button"></i>
+                    <i class="next-banck ml-2 m-md-5 m-lg-5 fas fa-chevron-right wow animated fadeInLeft delay-05s" id="next-button"></i>
                 </div>
             </div>
         </section>
