--- a/html/blog.html
+++ b/html/blog.html
@@ -66,13 +66,12 @@
             <i class="fas fa-arrow-up"></i>
         </button>
     </footer>
-
     <script type="text/javascript" src="../js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="../js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/popper.min.js"></script>
     <script type="text/javascript" src="../js/wow.min.js"></script>
     <script type="text/javascript" src="../js/blog.js"></script>
-    <script type="module" src="../main.js/main.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
