--- a/index.html
+++ b/index.html
@@ -597,6 +597,6 @@
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/wow.min.js"></script>
-    <script type="module" src="./main.js/main.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
