--- a/html/blog.html
+++ b/html/blog.html
@@ -72,6 +72,6 @@
     <script type="text/javascript" src="../js/popper.min.js"></script>
     <script type="text/javascript" src="../js/wow.min.js"></script>
     <script type="text/javascript" src="../js/blog.js"></script>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="../script.js"></script>
 </body>
 </html>
