Mudança no arquivo favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./imgs/icons/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./imgs/icons/favicon.webp" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="description" content="Transforme sua jornada fitness na PrimeFit - Uma academia dedicada ao seu bem-estar físico e mental. Oferecemos treinamentos especializados, equipamentos modernos e um ambiente acolhedor. Alcance seus objetivos de forma saudável e eficaz com a PrimeFit.">
     <title>PrimeFit</title>
